Remove .idea from repository